--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 body {
     background: url(bg.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     justify-content: center;
     min-height: 100vh;
     font-family: 'Poppins';
